# shitmail-jmap-filter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  fly.toml
src/: config.rs  dkim.rs  jmap.rs  log.rs  main.rs  policy.rs  push.rs  retry.rs  state.rs  worker.rs
src/domain/: cache.rs  mod.rs  psl.rs  rdap.rs
